--- a/.drone.yml
+++ b/.drone.yml
@@ -49,4 +49,4 @@ pipeline:
       event: deployment
       environment: development
     commands:
-     - scripts/backupMongo.sh
+     - su user1 -c 'scripts/backupMongo.sh'
