fix up user to be generic

--- a/.drone.yml
+++ b/.drone.yml
@@ -49,4 +49,4 @@ pipeline:
       event: deployment
       environment: development
     commands:
-     - su user1 -c 'scripts/backupMongo.sh'
+     - /bin/backupMongo.sh
