--- a/.drone.yml
+++ b/.drone.yml
@@ -49,4 +49,4 @@ pipeline:
       event: deployment
       environment: development
     commands:
-     - backupMongo.sh
+     - scripts/backupMongo.sh
